# nexus

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
crates/nexus-common/: Cargo.toml
crates/nexus-common/src/: error.rs  types.rs
crates/nexus-server/: Cargo.toml
crates/nexus-server/src/: config.rs  main.rs
crates/nexus-server/src/api/: error.rs  middleware.rs  mod.rs  routes.rs  state.rs  websocket.rs
crates/nexus-server/src/db/: influxdb.rs  mod.rs  neo4j.rs  postgres.rs  qdrant.rs  redis.rs
crates/nexus-server/src/models/: auth.rs  requests.rs  responses.rs
crates/nexus-server/src/perspective/: cache.rs  discourse.rs  engine.rs  mod.rs  semantic.rs  syntactic.rs  synthesis.rs
crates/nexus-server/src/river/: beliefs.rs  consciousness.rs  dialogue.rs  episodic.rs  integrated.rs  mod.rs
crates/nexus-server/src/shared/: embeddings.rs  mod.rs  ollama.rs
migrations/: 20240101000001_initial.down.sql  20240101000001_initial.up.sql
scripts/: health-check.sh  seed-data.sh
web/src/app/: layout.tsx  page.tsx
web/src/components/: AnalysisPanel.tsx  AuthForm.tsx  ChatInput.tsx  ChatMessage.tsx  ConsciousnessPanel.tsx  ModeSelector.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: api.ts
web/src/types/: index.ts
